--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".MqttApplication"
+        android:name=".view.MqttApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -18,13 +18,13 @@
         android:theme="@style/Theme.FinalAndroidMqtt"
         tools:targetApi="31">
         <activity
-            android:name=".PublishMessage"
+            android:name=".view.PublishMessage"
             android:exported="false" />
         <activity
-            android:name=".ReadPublishSensors"
+            android:name=".view.ReadPublishSensors"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".view.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
