--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -18,6 +18,19 @@
         android:theme="@style/Theme.FinalAndroidMqtt"
         tools:targetApi="31">
         <activity
+            android:name=".view.activity.datavisualiser.DataVisualiserActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.activity.MenuActivity"
+            android:exported="true"
+            android:theme="@style/Theme.FinalAndroidMqtt">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".view.PublishMessage"
             android:exported="false" />
         <activity
@@ -26,11 +39,7 @@
         <activity
             android:name=".view.activity.MainActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <service android:name="org.eclipse.paho.android.service.MqttService" />
