--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -43,7 +43,7 @@
             android:name=".view.ReadPublishSensors"
             android:exported="false" />
         <activity
-            android:name=".view.activity.MainActivity"
+            android:name=".view.activity.clientsandsubs.MainActivity"
             android:exported="true" />
 
         <service android:name="org.eclipse.paho.android.service.MqttService" />
